--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "@mui/material": "^6.3.0",
     "@mui/styled-engine-sc": "^6.3.0",
     "express": "^4.21.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "mapbox-gl": "^3.9.2",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.0.2",
     "styled-components": "^6.1.13"
   },
