--- a/ApiLogin/package.json
+++ b/ApiLogin/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "websockets": "^0.2.0",
+    "ws": "^8.18.0"
   }
 }
